change the template

--- a/src/main/resources/templates/email/facture-creation.html
+++ b/src/main/resources/templates/email/facture-creation.html
@@ -166,7 +166,7 @@
 
         <!-- MONTANT -->
         <div class="montant">
-            Montant total : <span th:text="${#numbers.formatDecimal(montantTotal, 0, 2)} + ' €'">1 250,00 €</span>
+            Montant total : <span th:text="${#numbers.formatDecimal(montantTotal, 0, 2)} + ' FCFA'">1 250,00 FCFA</span>
         </div>
 
         <!-- CTA -->
